@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.1.4 - not released yet
+	* Bugfix: Hovering multiple quick-info elements subsequently in direct sequence did only show the first info, no following ones
 	* Bugfix: RTE auto focus failed. Added workaround to focus RTE if first field
 	* Changed: Only focus RTE when loaded over ajax
 	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
